# project-final-parquet

./: CMakeLists.txt  README.md  test.parquet
include/: column_encryption_config.hpp  crypto_utils.hpp  kms.hpp  parquet_encryption_config.hpp  parquet_encryption_mode.hpp  parquet_reader.hpp  parquet_writer.hpp
src/: crypto_utils.cpp  kms.cpp  main.cpp  parquet_reader.cpp  parquet_writer.cpp
tests/: parquet_encryption_tests.cpp  parquet_encryption_tests_old.cpp
